kustomization/components/unifi-network-application/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: una-unifi-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi-network-application
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi-network-application
    spec:
      containers:
        - env:
            - name: MEM_LIMIT
              value: "1024"
            - name: MEM_STARTUP
              value: "1024"
            - name: MONGO_DBNAME
              value: unifi
            - name: MONGO_HOST
              value: una-mongodb-svc
            - name: MONGO_PASS
              valueFrom:
                secretKeyRef:
                  name: una-secret
                  key: MONGO_PASS 
            - name: MONGO_PORT
              value: "27017"
            - name: MONGO_USER
              value: unifi
            - name: TZ
              value: America/Los_Angeles
          image: lscr.io/linuxserver/unifi-network-application
          name: unifi-network-application
          # https://help.ui.com/hc/en-us/articles/218506997-UniFi-Network-Required-Ports-Reference
          ports:
            - name: una-web
              containerPort: 8443
              protocol: TCP
            - name: device-api
              containerPort: 8080
              protocol: TCP
            - name: device-discover
              containerPort: 10001
              protocol: UDP
            - name: device-stun
              containerPort: 3478
              protocol: UDP
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: una-unifi-network-application-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: una-mongodb-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi-mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi-mongodb
    spec:
      containers:
        - image: mongodb/mongodb-community-server
          name: controller
          # https://help.ui.com/hc/en-us/articles/218506997-UniFi-Network-Required-Ports-Reference
          ports:
            - name: db
              containerPort: 27017
              protocol: TCP
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /docker-entrypoint-initdb.d/init-mongo.js
              name: init-mongodb
              readOnly: true
              subPath: init-mongo.js
      volumes:
        - emptyDir:
            medium: Memory
          name: init-mongodb
        - configMap:
            defaultMode: 0777
            name: una-init-mongodb-configmap
          name: init-mongodb-script
        - name: data
          persistentVolumeClaim:
            claimName: una-mongodb-pvc
