kustomization/components/unifi-network-application/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi-network-application-statefulset
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi-network-application
  serviceName: una-unifi-svc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi-network-application
    spec:
      containers:
        - image: mongo
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - mongo admin /scripts/shutdown-mongo.js
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 15
          name: mongodb
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-data
            - mountPath: /docker-entrypoint-initdb.d/init-mongo.js
              name: init-mongodb
              readOnly: true
              subPath: init-mongo.js
            - mountPath: /scripts
              name: mongodb-scripts
        - env:
            - name: MEM_LIMIT
              value: "1024"
            - name: MEM_STARTUP
              value: "1024"
            - name: MONGO_DBNAME
              value: unifi
            - name: MONGO_HOST
              value: 127.0.0.1
            - name: MONGO_PASS
              valueFrom:
                secretKeyRef:
                  name: una-secret
                  key: MONGO_PASS 
            - name: MONGO_PORT
              value: "27017"
            - name: MONGO_USER
              value: unifi
            - name: TZ
              value: America/Los_Angeles
          image: lscr.io/linuxserver/unifi-network-application
          livenessProbe:
            httpGet:
              port: una-web
              scheme: HTTPS
            initialDelaySeconds: 15
            periodSeconds: 15
          name: unifi
          # https://help.ui.com/hc/en-us/articles/218506997-UniFi-Network-Required-Ports-Reference
          ports:
            - name: una-web
              containerPort: 8443
              protocol: TCP
            - name: device-api
              containerPort: 8080
              protocol: TCP
            - name: device-discover
              containerPort: 10001
              protocol: UDP
            - name: device-stun
              containerPort: 3478
              protocol: UDP
          readinessProbe:
            httpGet:
              port: una-web
              scheme: HTTPS
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: unifi-config
              mountPath: /config
      priorityClassName: critical-application
      volumes:
        - emptyDir:
            medium: Memory
          name: init-mongodb
        - configMap:
            defaultMode: 0777
            name: una-mongodb-scripts-configmap
          name: mongodb-scripts
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn-encrypted
    - metadata:
        name: unifi-config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn-encrypted
