kustomization/components/unifi-network-application/service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
  name: unifi-network-application-svc
spec:
  ports:
    - name: una-web
      port: 443
      protocol: TCP
      targetPort: una-web
    - name: device-api
      port: 8080
      protocol: TCP
    - name: device-discover
      port: 10001
      protocol: UDP
    - name: device-stun
      port: 3478
      protocol: UDP
  selector:
    app.kubernetes.io/name: unifi-network-application
  type: LoadBalancer
