kustomization/components/unifi-network-application/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: una-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: una-unifi-svc
                port:
                  name: una-web
            path: /
            pathType: Prefix
